Fix background image painting for table cells

In r484771 the painting logic for table cells and rows with a background
image was inadvertently changed as a part of a refactoring. This in turn
led to the wrong ImageClient being used in cases where the background is
set on the table row as opposed to the cell.

The bug was introduced between patch set 3 and 4 of the original change.

This CL restores the original behavior by using the correct ImageClient.

TEST=fast/table/backgr_on_table_row.html
BUG=742053
R=pdr@chromium.org

Change-Id: I7316ddf34698ba78d43067dd46610ece628ef7fe